fix navbar being overlapped problem

--- a/anovalabs_client/src/stylesheets/navbar.css
+++ b/anovalabs_client/src/stylesheets/navbar.css
@@ -1,5 +1,8 @@
 .navbar_menu {
   background: #F7F7F7;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 .navbar-options {
   display: flex;
@@ -10,9 +13,7 @@
   font-size: 20px;
   justify-content: flex-end;
   text-align: center;
-
 }
-
 .logo {
   width: 180px;
   height: 65px;
